--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.24.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
+    "@google-cloud/vision": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
