--- a/functions/package.json
+++ b/functions/package.json
@@ -11,22 +11,29 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.26.1",
     "@google-cloud/aiplatform": "^3.24.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "mathjs": "^13.0.2"
   },
   "devDependencies": {
     "@google-cloud/vision": "^4.3.0",
+    "@types/dotenv": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "firebase-tools": "^13.13.3",
     "typescript": "^4.9.5"
   },
   "private": true
