--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "mathjs": "^13.0.2"
+    "mathjs": "^13.0.2",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "@google-cloud/vision": "^4.3.0",
