--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "supabase": "^1.190.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.2"
+    "@anthropic-ai/sdk": "^0.27.0",
+    "@supabase/supabase-js": "^2.45.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mathjs": "^13.1.1",
+    "tesseract.js": "^5.1.1"
   }
 }
